--- a/index.html
+++ b/index.html
@@ -55,13 +55,8 @@
                         </a>
                     </li>
                     <li class="c-menu-nav__item">
-                        <a href="#" class="c-menu-nav__link ">
+                        <a href="cennik.html" class="c-menu-nav__link ">
                             CENNIK
-                        </a>
-                    </li>
-                    <li class="c-menu-nav__item">
-                        <a href="specjalisci.html" class="c-menu-nav__link ">
-                            NASI SPECJALIŚCI
                         </a>
                     </li>
                     <li class="c-menu-nav__item">
@@ -76,22 +71,28 @@
                 </ul>
             </div>
         </nav>
-        <div class="c-phone-wrapper"><i class="fas fa-phone c-phone-wrappper__icon"></i>
-            <p class="c-phone-wrapper__number">+48 516 516 112</p>
+        <div class="c-phone-wrapper">
+            <div class="c-phone-wrapper__phone">
+                <i class="fas fa-phone c-phone-wrappper__icon"></i>
+                </i>
+                <p class="c-phone-wrapper__number">+48 516 516 112</p>
+            </div>
+            <ul class="c-social-list">
+                <a href="https://www.facebook.com/eskulap.mosina" class="c-social-list__link">
+                    <li class="c-social-list__social"><i class="fab fa-facebook-square"></i></li>
+                </a>
+                <a href="https://www.instagram.com/laser_fotona4d_mosina/" class="c-social-list__link">
+                    <li class="c-social-list__social"><i class="fab fa-instagram"></i></li>
+                </a>
+                <a href="eskulap.mosina@gmail.com" class="c-social-list__link">
+                    <li class="c-social-list__social"><i class="fas fa-envelope"></i></li>
+                </a>
+            </ul>
         </div>
         <div class="l-header-section-wrapper">
             <div class="c-header-section">
                 <h1 class="c-header-section__title">ORTOPEDIA
                 </h1>
-                <div class="c-header-section__img-wrapper">
-                    <img class="c-header-section__img" sizes="(max-width: 1666px) 100vw, 1666px" srcset="
-assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_330.png 330w,
-assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_934.png 934w,
-assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1366.png 1366w,
-assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1666.png 1666w"
-                        src="clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1666.png" alt="Ćwicząca kobieta">
-                </div>
-
                 <ul class="c-header-list">
                     <a href="" class="c-header-list__link">
                         <li class="c-header-list__item">Stawy</li>
@@ -124,18 +125,18 @@ assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1666.png 1666w"
                         <li class="c-header-list__item">Ścięgna</li>
                     </a>
                 </ul>
+                <div class="c-header-section__img-wrapper">
+                    <img class="c-header-section__img" sizes="(max-width: 1666px) 100vw, 1666px" srcset="
+assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_330.png 330w,
+assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_934.png 934w,
+assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1366.png 1366w,
+assets/clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1666.png 1666w"
+                        src="clem-onojeghuo-n6gnCa77Urc-unsplash_ifa3v1_c_scale,w_1666.png" alt="Ćwicząca kobieta">
+                </div>
             </div>
             <div class="c-header-section">
                 <h1 class="c-header-section__title">LASEROTERAPIA
                 </h1>
-                <div class="c-header-section__img-wrapper">
-                    <img class="c-header-section__img" sizes="(max-width: 768px) 100vw, 768px" srcset="
-assets/pexels-photo-1036623_kebkpg_c_scale,w_350.png 350w,
-assets/pexels-photo-1036623_kebkpg_c_scale,w_517.png 517w,
-assets/pexels-photo-1036623_kebkpg_c_scale,w_650.png 650w,
-assets/pexels-photo-1036623_kebkpg_c_scale,w_768.png 768w" src="pexels-photo-1036623_kebkpg_c_scale,w_768.png" alt="">
-                </div>
-
                 <ul class="c-header-list">
                     <a href="" class="c-header-list__link">
                         <li class="c-header-list__item">Redukcja przebarwień</li>
@@ -165,18 +166,17 @@ assets/pexels-photo-1036623_kebkpg_c_scale,w_768.png 768w" src="pexels-photo-103
                         <li class="c-header-list__item">Peeling</li>
                     </a>
                 </ul>
+                <div class="c-header-section__img-wrapper">
+                    <img class="c-header-section__img" sizes="(max-width: 768px) 100vw, 768px" srcset="
+assets/pexels-photo-1036623_kebkpg_c_scale,w_350.png 350w,
+assets/pexels-photo-1036623_kebkpg_c_scale,w_517.png 517w,
+assets/pexels-photo-1036623_kebkpg_c_scale,w_650.png 650w,
+assets/pexels-photo-1036623_kebkpg_c_scale,w_768.png 768w" src="pexels-photo-1036623_kebkpg_c_scale,w_768.png" alt="">
+                </div>
             </div>
             <div class="c-header-section">
                 <h1 class="c-header-section__title">PIELĘGNACJA SKÓRY
                 </h1>
-                <div class="c-header-section__img-wrapper">
-                    <img class="c-header-section__img" sizes="(max-width: 1860px) 100vw, 1860px" srcset="
-assets/S_wkkt5j_c_scale,w_350.png 350w,
-assets/S_wkkt5j_c_scale,w_1091.png 1091w,
-assets/S_wkkt5j_c_scale,w_1492.png 1492w,
-assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt="">
-                </div>
-
                 <ul class="c-header-list">
                     <a href="" class="c-header-list__link">
                         <li class="c-header-list__item">Twarz</li>
@@ -206,6 +206,13 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
                         <li class="c-header-list__item">Nos</li>
                     </a>
                 </ul>
+                <div class="c-header-section__img-wrapper">
+                    <img class="c-header-section__img" sizes="(max-width: 1860px) 100vw, 1860px" srcset="
+assets/S_wkkt5j_c_scale,w_350.png 350w,
+assets/S_wkkt5j_c_scale,w_1091.png 1091w,
+assets/S_wkkt5j_c_scale,w_1492.png 1492w,
+assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt="">
+                </div>
             </div>
         </div>
 
@@ -245,45 +252,6 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
             </div>
             <a href="zabiegi.html" class="offert-btn btn">Więcej zabiegów</a>
             <span class="offert-line line"></span>
-        </section>
-        <section class="doctors">
-            <h2 class="doctors-title">NASI SPECJALIŚCI</h2>
-            <div class="l-doctors">
-                <div class="c-doctor">
-                    <img class="c-doctor__img" src="./assets/doctor1.png">
-                    <div class="c-doctor__more">
-                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
-                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
-                    </div>
-                </div>
-                <div class="c-doctor">
-                    <img class="c-doctor__img" src="./assets/doctor1.png">
-                    <div class="c-doctor__more">
-                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
-                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
-                    </div>
-                </div>
-                <div class="c-doctor">
-                    <img class="c-doctor__img" src="./assets/doctor1.png">
-                    <div class="c-doctor__more">
-                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
-                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
-                    </div>
-                </div>
-                <div class="c-doctor">
-                    <img class="c-doctor__img" src="./assets/doctor1.png">
-                    <div class="c-doctor__more">
-                        <h3 class="c-doctor__title">DR. GRZYWACZ</h3>
-                        <p class="c-doctor__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-                            aliquam ratione delectus doloribus inventore, nisi nam alias nesciunt animi repellat.</p>
-                    </div>
-                </div>
-            </div>
-            <a href="specjalisci.html" class="doctors-btn btn">Inni specjaliści</a>
-            <span class="doctors-line line"></span>
         </section>
         <section class="l-opinions">
             <h2 class="opinions-title">OPINIE NASZYCH KLIENTÓW</h2>
@@ -485,6 +453,7 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
             <span class="opinions-line line"></span>
         </section>
         <section class="l-contact">
+            <h2 class="contact-title">ZOSTAŃMY W KONTAKCIE</h2>
             <div class="c-contact">
                 <p class="c-contact__call">Zadzwoń</p>
                 <p class="c-contact__number">+48 516 516 112</p>
@@ -521,13 +490,8 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
                 </a>
             </li>
             <li class="c-footer-nav__item">
-                <a href="#" class="c-footer-nav__link ">
+                <a href="cennik.html" class="c-footer-nav__link ">
                     CENNIK
-                </a>
-            </li>
-            <li class="c-footer-nav__item">
-                <a href="specjalisci.html" class="c-footer-nav__link ">
-                    NASI SPECJALIŚCI
                 </a>
             </li>
             <li class="c-footer-nav__item">
@@ -559,7 +523,7 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
             </a>
         </ul>
     </footer>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
