--- a/kontakt.html
+++ b/kontakt.html
@@ -56,13 +56,8 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="#" class="c-menu-nav__link ">
+                    <a href="cennik.html" class="c-menu-nav__link ">
                         CENNIK
-                    </a>
-                </li>
-                <li class="c-menu-nav__item">
-                    <a href="specjalisci.html" class="c-menu-nav__link ">
-                        NASI SPECJALIŚCI
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
@@ -142,13 +137,8 @@
                 </a>
             </li>
             <li class="c-footer-nav__item">
-                <a href="#" class="c-footer-nav__link ">
+                <a href="cennik.html" class="c-footer-nav__link ">
                     CENNIK
-                </a>
-            </li>
-            <li class="c-footer-nav__item">
-                <a href="specjalisci.html" class="c-footer-nav__link ">
-                    NASI SPECJALIŚCI
                 </a>
             </li>
             <li class="c-footer-nav__item">
