--- a/o-nas.html
+++ b/o-nas.html
@@ -22,7 +22,7 @@
             </div>
         </a>
         <button class="c-hamburger ">
-            <span class="c-hamburger__box c">
+            <span class="c-hamburger__box">
                 <span class="c-hamburger__inner "></span>
             </span>
         </button>
@@ -55,13 +55,8 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="#" class="c-menu-nav__link ">
+                    <a href="cennik.html" class="c-menu-nav__link ">
                         CENNIK
-                    </a>
-                </li>
-                <li class="c-menu-nav__item">
-                    <a href="specjalisci.html" class="c-menu-nav__link ">
-                        NASI SPECJALIŚCI
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
@@ -141,13 +136,8 @@
                 </a>
             </li>
             <li class="c-footer-nav__item">
-                <a href="#" class="c-footer-nav__link ">
+                <a href="cennik.html" class="c-footer-nav__link ">
                     CENNIK
-                </a>
-            </li>
-            <li class="c-footer-nav__item">
-                <a href="specjalisci.html" class="c-footer-nav__link ">
-                    NASI SPECJALIŚCI
                 </a>
             </li>
             <li class="c-footer-nav__item">
