--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/131d487908.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="//ciasteczka.eu/cookiesEU-latest.min.js"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function () {
+            jQuery.fn.cookiesEU();
+        });
+    </script>
 </head>
 
 <body>
