--- a/cennik.html
+++ b/cennik.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="#" class="c-menu-nav__link c-menu-nav__link--active">
+                    <a href="#" class="c-menu-nav__link ">
                         O NAS
                     </a>
                 </li>
@@ -55,7 +55,7 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="cennik.html" class="c-menu-nav__link ">
+                    <a href="cennik.html" class="c-menu-nav__link c-menu-nav__link--active">
                         CENNIK
                     </a>
                 </li>
