--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medicalaser - Centrum medycyny laserowej i regeneracyjnej</title>
     <link rel="stylesheet" href="style/css/style.css">
+    <link rel="stylesheet" href="style/css/baguetteBox.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/131d487908.js" crossorigin="anonymous"></script>
@@ -259,6 +260,60 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
             </div>
             <a href="zabiegi.html" class="offert-btn btn">Więcej zabiegów</a>
             <span class="offert-line line"></span>
+        </section>
+        <section class="l-gallery">
+            <h2 class="offert-title">GALERIA</h2>
+            <div class="c-gallery">
+                <a class="c-gallery__link" href="./assets/gallery1.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery1.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery2.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery2.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery3.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery3.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery4.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery4.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery5.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery5.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery5.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery5.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery7.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery7.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery8.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery8.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery1.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery1.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery2.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery2.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery3.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery3.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery4.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery4.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery5.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery5.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery5.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery5.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery7.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery7.jpg" alt="First image">
+                </a>
+                <a class="c-gallery__link" href="./assets/gallery8.jpg">
+                    <img class="c-gallery__img" src="./assets/mingallery8.jpg" alt="First image">
+                </a>
+
+            </div>
         </section>
         <section class="l-opinions">
             <h2 class="opinions-title">OPINIE NASZYCH KLIENTÓW</h2>
@@ -530,7 +585,10 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
             </a>
         </ul>
     </footer>
+
+    <script src="baguetteBox.min.js"></script>
     <script src="main.js"></script>
+
 </body>
 
 </html>
