--- a/index.html
+++ b/index.html
@@ -59,8 +59,23 @@
                     </li>
                     <li class="c-menu-nav__item">
                         <a href="zabiegi.html" class="c-menu-nav__link ">
+                            <i class="fas fa-chevron-down c-menu-nav__icon"></i>
                             ZABIEGI
                         </a>
+                        <ul class="c-menu-nav__sub-item">
+                            <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                                ENDOLIFTING
+                            </a>
+                            <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                                KOMÓRKI MACIERZYSTE
+                            </a>
+                            <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                                OSOCZE BOGATOPŁYTOWE
+                            </a>
+                            <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                                FIBRYNA BOGATOPŁYTKOWA
+                            </a>
+                        </ul>
                     </li>
                     <li class="c-menu-nav__item">
                         <a href="cennik.html" class="c-menu-nav__link ">
@@ -70,6 +85,29 @@
                     <li class="c-menu-nav__item">
                         <a href="kontakt.html" class="c-menu-nav__link ">
                             KONTAKT
+                        </a>
+                    </li>
+                </ul>
+                <ul class="c-most-popular">
+
+                    <li class="c-most-popular__item">
+                        <a href="" class="c-most-popular__link">
+                            ENDOLIFTING
+                        </a>
+                    </li>
+                    <li class="c-most-popular__item">
+                        <a href="" class="c-most-popular__link">
+                            KOMÓRKI MACIERZYSTE
+                        </a>
+                    </li>
+                    <li class="c-most-popular__item">
+                        <a href="" class="c-most-popular__link">
+                            FIBRYNA
+                        </a>
+                    </li>
+                    <li class="c-most-popular__item">
+                        <a href="" class="c-most-popular__link">
+                            OSOCZE BOGATOPŁYKOWE
                         </a>
                     </li>
                 </ul>
@@ -257,6 +295,13 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
                             id, optio nisi dolorum incidunt quis expedita? Obcaecati, adipisci sapiente.</p>
                     </div>
                 </div>
+                <div class="c-cards__card">
+                    <div class="c-cards__more">
+                        <h3 class="c-cards__title">USUWANIE KURZAJEK</h3>
+                        <p class="c-cards__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum laborum
+                            id, optio nisi dolorum incidunt quis expedita? Obcaecati, adipisci sapiente.</p>
+                    </div>
+                </div>
             </div>
             <a href="zabiegi.html" class="offert-btn btn">Więcej zabiegów</a>
             <span class="offert-line line"></span>
@@ -314,6 +359,8 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
                 </a>
 
             </div>
+            <a href="zabiegi.html" class="offert-btn btn">Więcej zabiegów</a>
+            <span class="offert-line line"></span>
         </section>
         <section class="l-opinions">
             <h2 class="opinions-title">OPINIE NASZYCH KLIENTÓW</h2>
@@ -559,6 +606,11 @@ assets/S_wkkt5j_c_scale,w_1860.png 1860w" src="S_wkkt5j_c_scale,w_1860.png" alt=
             <li class="c-footer-nav__item">
                 <a href="kontakt.html" class="c-footer-nav__link ">
                     KONTAKT
+                </a>
+            </li>
+            <li class="c-footer-nav__item">
+                <a href="polityka.html" class="c-footer-nav__link ">
+                    POLITYKA PRYWATNOŚCI
                 </a>
             </li>
         </ul>
