--- a/polityka.html
+++ b/polityka.html
@@ -110,50 +110,123 @@
         </div>
     </nav>
     <main class="l-main">
-        <section class="about-us">
+        <section class="cookies">
             <div class="c-header-section">
-                <h1 class="c-header-section__title">O NAS</h1>
-            </div>
-            <div class="c-about">
-                <div class="c-about__img-wrapper">
-                    <div class="c-about__img-more">
-                        <h3 class="c-about__img-title">MEDICALASER</h3>
-                        <p class="c-about__img-desc">
-                            Centrum medycyny laserowej i regneracyjnej</p>
-                    </div>
-                </div>
-                <p class="c-about__text">Klinika MedicaLaser to specjalistyczne centrum medyczne położone w Mosinie.
-                    Posiada
-                    w swojej ofercie nowoczesne zabiegi laserowe, pozwalające szybko i bezinwazyjnie poprawić i
-                    odmłodzić wygląd skóry oraz ciała, a także pozbyć się dolegliwości takich jak nietrzymanie moczu,
-                    chrapanie, żylaki kończyn dolnych.
-
-                    Nasza klinika wyróżnia się szeroką ofertą innowacyjnych zabiegów, wśród których na szczególną uwagę
-                    pacjentów zasługuje laserowy Endolifting® Twarzy Fotona 4D. Tylko u nas można poddać się zabiegowi
-                    wzbogaconemu o koncentrat osocza bogatopłytkowego HD i ekstrakt komórek macierzystych. Oferujemy
-                    Państwu dwa pakiety laserowego Endoliftingu Twarzy 4D – wyłącznie w połączeniu z iniekcjami osocza
-                    lub komórek macierzystych.</p>
+                <h1 class="c-header-section__title">POLITYKA PRYWATNOŚCI</h1>
             </div>
 
-            <h2 class="hours-subtitle">GODZINY OTWARCIA</h2>
-            <div class="l-hours">
-                <ul class="c-hours">
-                    <li class="c-hours__item">poniedziałek</li>
-                    <li class="c-hours__item">wtorek</li>
-                    <li class="c-hours__item">środa</li>
-                    <li class="c-hours__item">czwartek</li>
-                    <li class="c-hours__item">piątek</li>
-                    <li class="c-hours__item">sobota</li>
-                    <li class="c-hours__item">niedziela</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">8:00 - 22:00</li>
-                    <li class="c-hours__item">nieczynne</li>
-                    <li class="c-hours__item">nieczynne</li>
-                </ul>
-            </div>
+            <ul class="c-cookies">
+                <li class="c-cookies__item">
+                    Polityka prywatności, ciasteczek (ang. cookies) MedicaLaser.pl
+                </li>
+                <li class="c-cookies__item">
+                    1. Serwis nie zbiera w sposób automatyczny żadnych informacji, z wyjątkiem informacji zawartych w
+                    plikach cookies.
+                </li>
+                <li class="c-cookies__item">
+                    2. Pliki cookies (tzw. „ciasteczka”) stanowią dane informatyczne, w szczególności pliki tekstowe,
+                    które przechowywane są
+                    w urządzeniu końcowym Użytkownika Serwisu i przeznaczone są do korzystania ze stron internetowych
+                    Serwisu. Cookies
+                    zazwyczaj zawierają nazwę strony internetowej, z której pochodzą, czas przechowywania ich na
+                    urządzeniu końcowym oraz
+                    unikalny numer.
+                </li>
+                <li class="c-cookies__item">
+                    3. Podmiotem zamieszczającym na urządzeniu końcowym Użytkownika Serwisu pliki cookies oraz
+                    uzyskującym do nich dostęp
+                    jest operator Serwisu MedicaLaser.
+                </li>
+                <li class="c-cookies__item">
+                    4. Pliki cookies wykorzystywane są w celu:
+                </li>
+                <li class="c-cookies__item">
+                    a) dostosowania zawartości stron internetowych Serwisu do preferencji Użytkownika oraz optymalizacji
+                    korzystania ze
+                    stron internetowych; w szczególności pliki te pozwalają rozpoznać urządzenie Użytkownika Serwisu i
+                    odpowiednio
+                    wyświetlić stronę internetową, dostosowaną do jego indywidualnych potrzeb;
+                </li>
+                <li class="c-cookies__item">
+                    b) tworzenia statystyk, które pomagają zrozumieć, w jaki sposób Użytkownicy Serwisu korzystają ze
+                    stron internetowych,
+                    co umożliwia ulepszanie ich struktury i zawartości;
+                </li>
+                <li class="c-cookies__item">
+                    c) utrzymanie sesji Użytkownika Serwisu (po zalogowaniu), dzięki której Użytkownik nie musi na
+                    każdej podstronie Serwisu
+                    ponownie wpisywać loginu i hasła;
+                </li>
+                <li class="c-cookies__item">
+                    5. W ramach Serwisu stosowane są dwa zasadnicze rodzaje plików cookies: „sesyjne” (session cookies)
+                    oraz „stałe”
+                    (persistent cookies). Cookies „sesyjne” są plikami tymczasowymi, które przechowywane są w urządzeniu
+                    końcowym
+                    Użytkownika do czasu wylogowania, opuszczenia strony internetowej lub wyłączenia oprogramowania
+                    (przeglądarki
+                    internetowej). „Stałe” pliki cookies przechowywane są w urządzeniu końcowym Użytkownika przez czas
+                    określony w
+                    parametrach plików cookies lub do czasu ich usunięcia przez Użytkownika.
+                </li>
+                <li class="c-cookies__item">
+                    6. W ramach Serwisu stosowane są następujące rodzaje plików cookies:
+                </li>
+                <li class="c-cookies__item">
+                    a) „niezbędne” pliki cookies, umożliwiające korzystanie z usług dostępnych w ramach Serwisu, np.
+                    uwierzytelniające pliki
+                    cookies wykorzystywane do usług wymagających uwierzytelniania w ramach Serwisu;
+                </li>
+                <li class="c-cookies__item">
+                    b) pliki cookies służące do zapewnienia bezpieczeństwa, np. wykorzystywane do wykrywania nadużyć w
+                    zakresie uwierzytelniania w ramach Serwisu;
+                </li>
+                <li class="c-cookies__item">
+                    c) „wydajnościowe” pliki cookies, umożliwiające zbieranie informacji o sposobie korzystania ze stron
+                    internetowych Serwisu;
+                </li>
+                <li class="c-cookies__item">
+                    d) „funkcjonalne” pliki cookies, umożliwiające „zapamiętanie” wybranych przez Użytkownika ustawień i
+                    personalizację interfejsu Użytkownika, np. w zakresie wybranego języka lub regionu, z którego
+                    pochodzi Użytkownik, rozmiaru czcionki, wyglądu strony internetowej itp.;
+                </li>
+                <li class="c-cookies__item">
+                    e) „reklamowe” pliki cookies, umożliwiające dostarczanie Użytkownikom treści reklamowych bardziej
+                    dostosowanych do ich
+                    zainteresowań.
+                </li>
+                <li class="c-cookies__item">
+                    7. W wielu przypadkach oprogramowanie służące do przeglądania stron internetowych (przeglądarka
+                    internetowa) domyślnie
+                    dopuszcza przechowywanie plików cookies w urządzeniu końcowym Użytkownika. Użytkownicy Serwisu mogą
+                    dokonać w każdym
+                    czasie zmiany ustawień dotyczących plików cookies. Ustawienia te mogą zostać zmienione w
+                    szczególności w taki sposób,
+                    aby blokować automatyczną obsługę plików cookies w ustawieniach przeglądarki internetowej bądź
+                    informować o ich
+                    każdorazowym zamieszczeniu w urządzeniu Użytkownika Serwisu. Szczegółowe informacje o możliwości i
+                    sposobach obsługi
+                    plików cookies dostępne są w ustawieniach oprogramowania (przeglądarki internetowej).
+                </li>
+                <li class="c-cookies__item">
+                    8. Operator Serwisu informuje, że ograniczenia stosowania plików cookies mogą wpłynąć na niektóre
+                    funkcjonalności
+                    dostępne na stronach internetowych Serwisu.
+                </li>
+                <li class="c-cookies__item">
+                    9. Pliki cookies zamieszczane w urządzeniu końcowym Użytkownika Serwisu i wykorzystywane mogą być
+                    również przez
+                    współpracujących z operatorem Serwisu reklamodawców oraz partnerów.
+                </li>
+                <li class="c-cookies__item">
+                    10. Więcej informacji na temat plików cookies dostępnych jest pod adresem wszystkoociasteczkach.pl
+                    lub w sekcji „Pomoc”
+                    w menu przeglądarki internetowej. Powyższy wzór polityki cookies chroniony jest prawem autorskim,
+                    które przysługują IAB
+                    Polska.
+                </li>
+
+
+            </ul>
         </section>
     </main>
     <footer class="l-footer">
