--- a/zabiegi.html
+++ b/zabiegi.html
@@ -52,8 +52,23 @@
                 </li>
                 <li class="c-menu-nav__item">
                     <a href="zabiegi.html" class="c-menu-nav__link c-menu-nav__link--active">
+                        <i class="fas fa-chevron-down c-menu-nav__icon"></i>
                         ZABIEGI
                     </a>
+                    <ul class="c-menu-nav__sub-item">
+                        <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                            ENDOLIFTING
+                        </a>
+                        <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                            KOMÓRKI MACIERZYSTE
+                        </a>
+                        <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                            OSOCZE BOGATOPŁYTOWE
+                        </a>
+                        <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                            FIBRYNA BOGATOPŁYTKOWA
+                        </a>
+                    </ul>
                 </li>
                 <li class="c-menu-nav__item">
                     <a href="cennik.html" class="c-menu-nav__link ">
@@ -63,6 +78,29 @@
                 <li class="c-menu-nav__item">
                     <a href="kontakt.html" class="c-menu-nav__link ">
                         KONTAKT
+                    </a>
+                </li>
+            </ul>
+            <ul class="c-most-popular">
+
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        ENDOLIFTING
+                    </a>
+                </li>
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        KOMÓRKI MACIERZYSTE
+                    </a>
+                </li>
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        FIBRYNA
+                    </a>
+                </li>
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        OSOCZE BOGATOPŁYKOWE
                     </a>
                 </li>
             </ul>
