--- a/cennik.html
+++ b/cennik.html
@@ -45,14 +45,29 @@
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
-                    <a href="#" class="c-menu-nav__link ">
+                    <a href="o-nas.html" class="c-menu-nav__link ">
                         O NAS
                     </a>
                 </li>
                 <li class="c-menu-nav__item">
                     <a href="zabiegi.html" class="c-menu-nav__link ">
+                        <i class="fas fa-chevron-down c-menu-nav__icon"></i>
                         ZABIEGI
                     </a>
+                    <ul class="c-menu-nav__sub-item">
+                        <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                            ENDOLIFTING
+                        </a>
+                        <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                            KOMÓRKI MACIERZYSTE
+                        </a>
+                        <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                            OSOCZE BOGATOPŁYTOWE
+                        </a>
+                        <a href="cennik.html" class="c-menu-nav__sub-item-link ">
+                            FIBRYNA BOGATOPŁYTKOWA
+                        </a>
+                    </ul>
                 </li>
                 <li class="c-menu-nav__item">
                     <a href="cennik.html" class="c-menu-nav__link c-menu-nav__link--active">
@@ -62,6 +77,29 @@
                 <li class="c-menu-nav__item">
                     <a href="kontakt.html" class="c-menu-nav__link ">
                         KONTAKT
+                    </a>
+                </li>
+            </ul>
+            <ul class="c-most-popular">
+
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        ENDOLIFTING
+                    </a>
+                </li>
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        KOMÓRKI MACIERZYSTE
+                    </a>
+                </li>
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        FIBRYNA
+                    </a>
+                </li>
+                <li class="c-most-popular__item">
+                    <a href="" class="c-most-popular__link">
+                        OSOCZE BOGATOPŁYKOWE
                     </a>
                 </li>
             </ul>
@@ -1411,6 +1449,11 @@
             <li class="c-footer-nav__item">
                 <a href="kontakt.html" class="c-footer-nav__link ">
                     KONTAKT
+                </a>
+            </li>
+            <li class="c-footer-nav__item">
+                <a href="polityka.html" class="c-footer-nav__link ">
+                    POLITYKA PRYWATNOŚCI
                 </a>
             </li>
         </ul>
